Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.7.0 (??/??/????):
	General:
	* Changed GTK+ minimum version requirement to 2.10.0.
	* Changed GLib minimum version requirement to 2.12.0.

	Pidgin:
	* Moved the "Debugging Information" section of the About box to a
	  "Build Information" dialog accessible on the Help menu.
	* Moved the Developer and Crazy Patch Writer information from the About
	  box to a "Developer Information" dialog accessible on the Help menu.
	* Moved the Translator information from the About box to a "Translator
	  Information" dialog accessible on the Help menu.
	* Use GtkStatusIcon for the docklet, providing better integration in
	  notification area.
	* Added UI for sending attentions (buzz, nudge) on supporting protocols.
	* Make the search dialog unobtrusive in the conversation window (by
	  making it look and behave like the search dialog in Firefox)
	* The Recent Log Activity sort method for the Buddy List now
	  distinguishes between no activity and a small amount of activity
	  in the distant past.  (Greg McNew)
	* Added a menu set mood globally for all mood-supporting accounts
	  (currently XMPP and ICQ).
	* Use standard (but small) GTK+ buttons instead of custom "X" symbol.

	Bonjour:
	* Added support for IPv6. (Thanks to T_X for testing)

	Gadu-Gadu:
	* Updated our bundled libgadu to 1.9.0-rc2 (many thanks to Krzysztof
	  Klinikowski for the work and testing put in here!)
	* Minimum requirement for external libgadu is now also 1.9.0-rc2.

	ICQ:
	* X-Status (Custom ICQ status icon) support.  Since most of the icons
	  available reflect moods, this is labeled "Set Mood" on the Accounts->ICQ
	  Account menu. (Andrew Ivanov, Tomáš Kebert, Yuriy Yevgrafov, and trac
	  users bob007, salieff, and nops)
	* Allow setting and displaying icons between 1x1 and 100x100 pixels.
	  Previously only icons between 48x48 and 52x64 were allowed.

	MSN: